# chat-room

./: .gitignore  CMakeLists.txt  README.md
sql/: create_table.sql
src/client/: CMakeLists.txt  client.c  client.h  global_variables.c  main.c  user.c  user.h
src/server/: CMakeLists.txt  global_variables.c  main.c  server.c  server.h  sql.c  sql.h  user.c  user.h
src/shared/: CMakeLists.txt  header.c  header.h  protocol.c  protocol.h  sbuf.c  sbuf.h  sock.c  sock.h  user_info.h  utils.c  utils.h
test/: CMakeLists.txt  client.cpp  protocol.cpp  server.cpp  user.cpp
